Paginação no endpoint de users